10/11/2006 - jdiamond
=====================

 * Added a Bosnian translation provided by Eminos to the Order interface.  No
   translation for the Manager interface has been done yet, but I did create a
   stub for it.
 * (trac #71) Fixed a bug that was preventing services with a 1 month term from
              recurring properly

10/10/2006 - jdiamond
=====================

 * (trac #121) Another attempt at the bug mentioned bellow
 * Removed the javascript call that clears the form when you select a new domain option when adding a domain to your order

10/4/2006 - jdiamond
====================

 * (trac #121) Fixed a bug that for some PHP installs, wasn't executing line items on a pending order

9/30/2006 - jdiamond
====================

 * (trac #121) Fixed a bug that was showing a "invoice not found" error whenever you
               canceled out of editing a payment from the View Order page.

9/29/2006 - jdiamond
====================

 * (trac #127) Replaced the $base_path global with a constant called BASE_PATH
 * (trac #124) Expanded currency fields to 8 digits maximum length
 * (trac #126) Fixed a bug that was preventing tables on the view account page from paging correctly
 * (trac #125) Fixed a bug that was preventing the user from moving past the 
               Domain Contact page in the Order interface under certain 
               installations of PHP
 * (trace #83) Fixed the "Cannot redeclare class soapclient" error that some were experiencing

9/12/2006 - jdiamond
====================

 * Fixed a bug that was preventing the Order interface from functioning when only
   the Pay by Check setting was turned on

9/11/2006 - jdiamond
====================

 * Branched off v0.4
 * v0.5 development will now begin in the main trunk

9/10/2006 - jdiamond
====================

 * (trac #111) Fixed an "Invalid Account" bug that occured when the user canceled a domain edit

9/8/2006 - jdiamond
====================
